envoy.wsh1.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    listener_filters:
      - name: "envoy.listener.tls_inspector"
        typed_config: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config: 
        #"@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: Http1
          stat_prefix: localgw
          common_http_protocol_options:
            max_connection_duration: 3600s
          upgrade_configs: 
            upgrade_type: "websocket"
          #            connect_config: 
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend2
              domains:
                - "*"
              routes:
                - match:
                    #connect_matcher: {}
                    prefix: "/"
                  route:
                    cluster: "cluster_8002"
                    timeout: 3600s
                    upgrade_configs:
                    - upgrade_type: websocket
                      enabled: true
                      #connect_config: {}
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: cluster_8002
    type: strict_dns
    connect_timeout: 1s
    dns_refresh_rate: 60s
    load_assignment:
      cluster_name: cluster_8002
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8002
    http2_protocol_options: 
      max_concurrent_streams: 100
      allow_connect: true
    lb_policy: round_robin
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
