envoy.wsh2.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
    listener_filters:
      - name: "envoy.listener.tls_inspector"
        typed_config: {}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        #typed_config: 
        #          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        config:
          codec_type: auto
          stat_prefix: localgw
          common_http_protocol_options:
                  #max_stream_duration: 3600s
            max_connection_duration: 3600s
          http2_protocol_options: 
            allow_connect: true
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          upgrade_configs: 
            upgrade_type: "CONNECT"
          #            connect_config: 
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend2
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: "echo_cluster"
                  timeout: 3600s
          http_filters:
          - name: envoy.router
            typed_config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8002
    listener_filters:
      - name: "envoy.listener.tls_inspector"
        typed_config: {}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        #typed_config: 
        #          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        config:
          codec_type: HTTP2
          stat_prefix: localgw
          common_http_protocol_options:
                  #max_stream_duration: 3600s
            max_connection_duration: 3600s
          http2_protocol_options: 
            allow_connect: true
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          upgrade_configs: 
            upgrade_type: websocket
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend2
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: "echo_cluster"
                  timeout: 3600s
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: service1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 80
    dns_refresh_rate: 60s
  - name: ping_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 9000
    dns_refresh_rate: 60s
  - name: echo_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 9999
    dns_refresh_rate: 60s
  - name: clusterhttpbin
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 7000
    dns_refresh_rate: 60s
  - name: thrift_server_8996
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8996
    dns_refresh_rate: 60s
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15001
